force-app/main/default/objects/Nota_buscada__c/Nota_buscada__c.object-meta.xml
<CustomObject>
    <label>Nota recebida</label>
    <nameField>
        <label>Nº da Nota</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas recebidas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>