force-app/main/default/objects/Nota_buscada__c/fields/CNPJ_Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_Fornecedor__c</fullName>
    <label>CNPJ Fornecedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>