force-app/main/default/objects/Nota_buscada__c/fields/Data_de_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_vencimento__c</fullName>
    <label>Data de vencimento</label>
    <type>Date</type>
</CustomField>