force-app/main/default/objects/Nota_buscada__c/fields/Lancada__c.field-meta.xml
<CustomField>
    <fullName>Lancada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lançada</label>
    <type>Checkbox</type>
</CustomField>