force-app/main/default/objects/Nota_buscada__c/fields/Link_PDF__c.field-meta.xml
<CustomField>
    <fullName>Link_PDF__c</fullName>
    <label>Link PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>